devops-server-pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: devops-server
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
  volumes:
    - name: html-volume
      persistentVolumeClaim:
        claimName: pvc-fs
