processor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: processor
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    gpu: "true"
