quantum-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quantum
spec:
  containers:
    - name: nginx
      image: nginx
    - name: redis
      image: redis
